--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/css": "^11.9.0",
+    "@material-ui/core": "^4.12.4",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
