--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@emotion/css": "^11.9.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.8.4",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
