--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
+    "@types/react-window": "^1.8.5",
+    "markdown-to-jsx": "^7.1.7",
+    "mui-markdown": "^0.5.3",
     "next": "12.1.6",
+    "next-seo": "^5.4.0",
+    "prism-react-renderer": "^1.3.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-window": "^1.8.7"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
