--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
+    "@types/cassandra-driver": "^4.2.0",
     "@types/react-window": "^1.8.5",
     "markdown-to-jsx": "^7.1.7",
     "mui-markdown": "^0.5.3",
