--- a/package.json
+++ b/package.json
@@ -15,18 +15,31 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
+    "@types/bcrypt": "^5.0.0",
     "@types/cassandra-driver": "^4.2.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/js-cookie": "^3.0.2",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/nodemailer": "^6.4.4",
     "@types/react-window": "^1.8.5",
+    "bcrypt": "^5.0.1",
+    "email-validator": "^2.0.4",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "markdown-to-jsx": "^7.1.7",
     "mui-markdown": "^0.5.3",
     "next": "12.1.6",
     "next-seo": "^5.4.0",
+    "nodemailer": "^6.7.7",
     "prism-react-renderer": "^1.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-window": "^1.8.7"
+    "react-input-verification-code": "^1.0.1",
+    "react-window": "^1.8.7",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/email-validator": "^1.0.6",
     "@types/node": "^18.0.0",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
