--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
   },
   "devDependencies": {
     "@types/email-validator": "^1.0.6",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^18.0.0",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "jwt-decode": "^3.1.2",
     "typescript": "^4.7.4"
   }
 }
