--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.12.4",
+    "@monaco-editor/react": "^4.4.5",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
     "@types/bcrypt": "^5.0.0",
@@ -23,6 +24,7 @@
     "@types/nodemailer": "^6.4.4",
     "@types/react-window": "^1.8.5",
     "bcrypt": "^5.0.1",
+    "copy-to-clipboard": "^3.3.1",
     "email-validator": "^2.0.4",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
