--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "18.2.0",
     "react-input-verification-code": "^1.0.1",
     "react-window": "^1.8.7",
+    "sharp": "^0.30.7",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
