--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/js-cookie": "^3.0.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/nodemailer": "^6.4.4",
+    "@types/react": "^18.0.15",
     "@types/react-window": "^1.8.5",
     "bcrypt": "^5.0.1",
     "copy-to-clipboard": "^3.3.1",
@@ -37,7 +38,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-input-verification-code": "^1.0.1",
+    "react-markdown": "^8.0.3",
     "react-window": "^1.8.7",
+    "rehype-raw": "^6.1.1",
     "sharp": "^0.30.7",
     "styled-components": "^5.3.5"
   },
